2005-06-02  Derek Price  <derek@ximbiot.com>

	* client.c: Don't set NULL for globals by C89.  Globally remove
	comparisons to NULL or replace with !.  Similarly remove or replace
	comparisons of strcmp and strncmp return value to 0.  Remove some
	unneeded braces around single-element blocks.
	(handle_*): Remove unecessary protos.
	(handle_notified, notified_a_file): Move up before first use.

2005-06-02  Derek Price  <derek@ximbiot.com>

	* sanity.sh (config): Simplify cleanup.

2005-06-02  Derek Price  <derek@ximbiot.com>

	* zlib.c (compress_buffer_input): Don't request more bytes from the
	underlying buffer than asked for.
	(compress_buffer_shutdown_input): Don't attempt to read EOF from the
	client during shutdown.  It might never be sent.
	* sanity.sh (abspath2): Test for this.

2005-05-31  Derek Price  <derek@ximbiot.com>

	* rcscmds.c (call_diff_argc_allocated): Rename to...
	(call_diff_arg_allocated): ...to match similar usage in other files.

2005-05-31  Derek Price  <derek@ximbiot.com>
	for Alexander Taler <alex@0--0.org>

	* rcscmds.c: Change type of call_diff_argc_allocated from int to
	size_t, to match the prototype of run_add_arg_p().  This fixes a
	bus error in OpenBSD 3.6 sparc64.

2005-05-27  Derek Price  <derek@ximbiot.com>

	* client.c (send_arg): Make arg const.  Remove unnecessary copy to
	buffer.
	(send_option_string): Rename to...
	(send_options): ...this and accept argc/argv in place of string.
	* client.h: Update protos to match the changes to client.c.
	* cvs.h (RCS_exec_rcsdiff, diff_exec): Update protos.
	(run_add_arg_p, run_arg_free_p): New protos.
	* diff.c (opts, opts_allocated): Replace with...
	(diff_argv, diff_argc, diff_arg_allocated): ...these.
	(add_diff_args): New convenience function.
	(diff): Use new constructs and APIs.
	* patch.c (patch_fileproc, RCS_checkin, RCS_delete_revs), rcscmds.c
	(call_diff_add_arg, call_diff_setup, RCS_merge, RCS_exec_rcsdiff,
	diff_exec, RCS_output_diff_options), update.c (patch_file): Use new